# rusty-coins

./: README.md  README.txt
.github/workflows/: rust-clippy.yml
crates/coins-cli/: Cargo.toml
crates/coins-cli/src/: account.rs  commodity.rs  lib.rs  main.rs  opt.rs
crates/coins-core/: Cargo.toml
crates/coins-core/migrations/0001-accounts/: up.sql
crates/coins-core/migrations/0002-commodities/: down.sql  up.sql
crates/coins-core/migrations/0003-transactions/: up.sql
crates/coins-core/migrations/0004-postings/: down.sql  up.sql
crates/coins-core/migrations/0005-prices/: up.sql
crates/coins-core/src/: error.rs  lib.rs  model.rs  prelude.rs
crates/coins-core/src/model/: account.rs  commodity.rs  migrations.rs
crates/coins-tui/: Cargo.toml
