[package]
name = "coins-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.6.3"
include_dir = "0.7.4"
rusqlite = { version = "0.35.0", features = ["bundled"] }
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
thiserror = "2.0.12"

[dev-dependencies]
pretty-sqlite = "0.1.0"
